# bzffmpegcmd

./: .gitignore  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/luoye/bzffmpeg/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/luoye/bzffmpegcmd/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/cmdutilt/: cmdutils.c  cmdutils.h  config.h  demo_test.c  ffmpeg.c  ffmpeg.h  ffmpeg_cmd.c  ffmpeg_cmd.h  ffmpeg_filter.c  ffmpeg_opt.c
app/src/main/cpp/include/arm64-v8a/: config.h
app/src/main/cpp/include/armeabi/: config.h
app/src/main/cpp/include/armeabi-v7a/: config.h
app/src/main/cpp/include/libavutil/: intreadwrite.h
app/src/main/java/com/luoye/bzffmpeg/: MainActivity.java  PermissionUtil.java
app/src/main/java/com/luoye/bzffmpegcmd/: FilePathUtil.java  MainActivity.java  PermissionUtil.java
app/src/main/java/com/luoye/bzmedia/: FFmpegCMDUtil.java  FFmpegUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/luoye/bzffmpeg/: ExampleUnitTest.java
app/src/test/java/com/luoye/bzffmpegcmd/: ExampleUnitTest.java
bzcmd/: CMakeLists.txt  build.gradle
bzcmd/src/main/: AndroidManifest.xml
bzcmd/src/main/cpp/: CMakeLists.txt
bzcmd/src/main/cpp/cmdutilt/: JvmManager.cpp  JvmManager.h  cmdutils.c  cmdutils.h  demo_test.c  demo_test.cpp  ffmpeg.c  ffmpeg.h  ffmpeg_cmd.c  ffmpeg_cmd.h  ffmpeg_demux.c  ffmpeg_filter.c  ffmpeg_hw.c  ffmpeg_mux.c  ffmpeg_mux_init.c  ffmpeg_opt.c  opt_common.c
bzcmd/src/main/cpp/include/arm64-v8a/: config.h
bzcmd/src/main/cpp/include/arm64-v8a/libavformat/: avformat.h
bzcmd/src/main/cpp/include/armeabi-v7a/: config.h
bzcmd/src/main/cpp/include/libavutil/: internal.h  parseutils.h
bzcmd/src/main/cpp/include/x86/: config.h
bzcmd/src/main/cpp/include/x86/libavcodec/: mathops.h
bzcmd/src/main/cpp/include/x86/libavutil/: internal.h  parseutils.h
bzcmd/src/main/cpp/include/x86_64/: config.h
bzcmd/src/main/java/com.luoye.bzmedia/: FFmpegCMDUtil.java
bzcmd/src/main/java/com/luoye/bzmedia/utils/: FFmpegCMDUtil.java
gradle/wrapper/: gradle-wrapper.properties
